# DSPM-Subnetting-ExposureGraph-Agnostic

./: README.md  pyproject.toml  requirements.txt
data/synthetic/: assets.csv  subnets.csv
notebooks/: DSPM_Subnetting_ExposureGraph_Lifecycle.ipynb
src/dspm_subnetting_exposuregraph/: __init__.py
src/dspm_subnetting_exposuregraph/cli/: destroy.py  run.py
