[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspm-subnetting-exposuregraph"
version = "5.0.0"
description = "DSPM Subnetting ExposureGraph (agnostic) - Colab-friendly"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.3",
  "pandas>=2.2",
  "numpy>=1.26",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "jsonschema>=4.22"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
